Update title and member count in genealogie-aly-koira.html
ajout de la version idrissa bellay tcharo

--- a/genealogie-aly-koira.html
+++ b/genealogie-aly-koira.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Généalogie ALY KOÏRA - 190 Membres</title>
+    <title>Généalogie ALY KOÏRA - 191 Membres</title>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -297,7 +297,7 @@
         </div>
     </div>
     <script>
-// BASE DE DONNÉES - 190 PERSONNES UNIQUES (analyse définitive)
+// BASE DE DONNÉES - 191 PERSONNES UNIQUES (analyse définitive + correction Chaffa Mahadi)
 const data = {
     // ═══ GÉNÉRATION 1 ═══
     "alkamahamane": { id: "alkamahamane", name: "Alkamahamane Sabalkaidi", alias: null, gender: "M", gen: 1, father: null, mother: null, children: ["goussoumbi","goma","hounaye","soumboulou","farimata_alk","ali"], note: "Ancêtre fondateur" },
@@ -315,7 +315,7 @@ const data = {
     "moussa": { id: "moussa", name: "Moussa Ali", alias: null, gender: "M", gen: 3, father: "ali", mother: null, children: ["mata_m","haylloli","wanaissou_m","jato","alassane_m","assoumane_m","abdou_m","sala"], note: "Mère: Fouga Alassane - 8 enfants" },
     "omorou": { id: "omorou", name: "Omorou Ali", alias: null, gender: "M", gen: 3, father: "ali", mother: null, children: ["houssouba","kabongou","mahamadou_o","sourgou","tabbo_o","zabbo","ichata_o"], note: "Mère: Fouga Alassane - 7 enfants" },
     "tamimoune": { id: "tamimoune", name: "Tamimoune Ali", alias: null, gender: "M", gen: 3, father: "ali", mother: null, children: ["chiddaye","mata_a","ichata_a","boudjal","saleymatou"], note: "Mère: Fouga Alassane - 5 enfants" },
-    "mahadi": { id: "mahadi", name: "Mahadi Ali", alias: null, gender: "M", gen: 3, father: "ali", mother: null, children: ["dayo","saffia","sawde","zarha","aminta_m","seydou_m"], note: "Mère: Fouga Alassane - 6 enfants" },
+    "mahadi": { id: "mahadi", name: "Mahadi Ali", alias: null, gender: "M", gen: 3, father: "ali", mother: null, children: ["dayo","saffia","sawde","zarha","aminta_m","chaffa","seydou_m"], note: "Mère: Fouga Alassane - 7 enfants" },
     "dalla": { id: "dalla", name: "Dalla", alias: null, gender: "M", gen: 3, father: null, mother: "farimata_alk", children: [] },
     // ═══ GÉNÉRATION 4 - Enfants de Mahamane Ali (12) ═══
     "mohomone": { id: "mohomone", name: "Mohomone Mahamane", alias: "Galla", gender: "M", gen: 4, father: "mahamane", mother: null, children: ["ibrahim_m","seydou_mo","ousmane_m","adama_m","hirinissa"] },
@@ -367,6 +367,7 @@ const data = {
     "sawde": { id: "sawde", name: "Sawde Mahadi", alias: null, gender: "F", gen: 4, father: "mahadi", mother: null, children: [] },
     "zarha": { id: "zarha", name: "Zarha Mahadi", alias: null, gender: "F", gen: 4, father: "mahadi", mother: null, children: [] },
     "aminta_m": { id: "aminta_m", name: "Aminta Mahadi", alias: null, gender: "F", gen: 4, father: "mahadi", mother: null, children: [] },
+    "chaffa": { id: "chaffa", name: "Chaffa Mahadi", alias: null, gender: "M", gen: 4, father: "mahadi", mother: null, children: [] },
     "seydou_m": { id: "seydou_m", name: "Seydou Mahadi", alias: null, gender: "M", gen: 4, father: "mahadi", mother: null, children: ["babeye","abaneye","adija_se","chidi","arhamatou_se","mariama_se","ali_se","bibata","abdoulaye_se","saleye"] },
     // ═══ GÉNÉRATION 4 - Enfants d'Agacha Kobbo (7) ═══
     "aicha_f": { id: "aicha_f", name: "Aicha Fedja", alias: null, gender: "F", gen: 4, father: null, mother: "kobbo", children: ["safietou_h","farimata_h","mohomodou_h","haoua_h","adama_h"] },
