--- a/mobile.html
+++ b/mobile.html
@@ -589,6 +589,229 @@ color:var(--text-muted);
 .empty-icon{font-size:48px;margin-bottom:16px;opacity:0.5}
 .empty-text{font-size:14px}
 
+/* === FORMULAIRE CONTRIBUER === */
+.form-intro{
+text-align:center;
+padding:24px 16px;
+margin-bottom:16px;
+}
+.form-intro-icon{font-size:48px;margin-bottom:12px}
+.form-intro h2{font-size:22px;font-weight:700;margin-bottom:8px}
+.form-intro p{font-size:14px;color:var(--text-secondary);line-height:1.5}
+
+.form-section{
+background:var(--card);
+border:1px solid var(--border);
+border-radius:var(--radius-lg);
+padding:20px;
+margin-bottom:16px;
+}
+.form-section-title{
+font-size:14px;
+font-weight:600;
+margin-bottom:16px;
+display:flex;
+align-items:center;
+justify-content:space-between;
+}
+.form-group{
+margin-bottom:14px;
+flex:1;
+}
+.form-group:last-child{margin-bottom:0}
+.form-group label{
+display:block;
+font-size:12px;
+color:var(--text-secondary);
+margin-bottom:6px;
+font-weight:500;
+}
+.form-group input, .form-group select{
+width:100%;
+padding:14px 16px;
+background:var(--surface);
+border:1px solid var(--border);
+border-radius:var(--radius);
+color:var(--text);
+font-size:15px;
+font-family:inherit;
+transition:all 0.2s;
+}
+.form-group input:focus, .form-group select:focus{
+outline:none;
+border-color:var(--primary);
+box-shadow:0 0 0 3px rgba(99,102,241,0.2);
+}
+.form-group input::placeholder{color:var(--text-muted)}
+.form-row{
+display:flex;
+gap:12px;
+}
+
+.add-child-btn{
+background:var(--primary);
+color:white;
+border:none;
+padding:8px 16px;
+border-radius:var(--radius-full);
+font-size:13px;
+font-weight:600;
+cursor:pointer;
+}
+.add-child-btn:active{opacity:0.8}
+
+.no-children{
+text-align:center;
+padding:24px;
+color:var(--text-muted);
+}
+.no-children p{margin-bottom:12px;font-size:14px}
+.add-first-child{
+background:var(--surface);
+color:var(--text);
+border:1px dashed var(--border);
+padding:12px 24px;
+border-radius:var(--radius);
+font-size:14px;
+cursor:pointer;
+}
+.add-first-child:active{background:var(--card-hover)}
+
+.child-item{
+background:var(--surface);
+border:1px solid var(--border);
+border-radius:var(--radius);
+padding:16px;
+margin-bottom:12px;
+position:relative;
+}
+.child-item-header{
+display:flex;
+justify-content:space-between;
+align-items:center;
+margin-bottom:12px;
+}
+.child-number{
+font-size:13px;
+font-weight:600;
+color:var(--primary-light);
+}
+.remove-child{
+background:rgba(239,68,68,0.2);
+color:#ef4444;
+border:none;
+width:28px;
+height:28px;
+border-radius:50%;
+font-size:16px;
+cursor:pointer;
+display:flex;
+align-items:center;
+justify-content:center;
+}
+.remove-child:active{background:rgba(239,68,68,0.4)}
+.child-fields{
+display:flex;
+flex-direction:column;
+gap:10px;
+}
+.child-row{
+display:flex;
+gap:10px;
+}
+.child-row .form-group{margin-bottom:0}
+.gender-select{
+display:flex;
+gap:8px;
+}
+.gender-option{
+flex:1;
+padding:12px;
+background:var(--card);
+border:2px solid var(--border);
+border-radius:var(--radius);
+text-align:center;
+cursor:pointer;
+transition:all 0.2s;
+}
+.gender-option.selected{
+border-color:var(--primary);
+background:rgba(99,102,241,0.15);
+}
+.gender-option:active{transform:scale(0.98)}
+.gender-option span{font-size:20px;display:block;margin-bottom:4px}
+.gender-option small{font-size:11px;color:var(--text-secondary)}
+
+.form-actions{
+display:flex;
+flex-direction:column;
+gap:10px;
+margin:24px 0;
+}
+.action-btn{
+display:flex;
+align-items:center;
+justify-content:center;
+gap:10px;
+padding:16px 24px;
+border:none;
+border-radius:var(--radius);
+font-size:15px;
+font-weight:600;
+font-family:inherit;
+cursor:pointer;
+transition:all 0.2s;
+}
+.action-btn:active{transform:scale(0.98)}
+.action-btn svg{width:20px;height:20px}
+.action-btn.whatsapp{
+background:#25D366;
+color:white;
+}
+.action-btn.copy{
+background:var(--primary);
+color:white;
+}
+.action-btn.download{
+background:var(--card);
+color:var(--text);
+border:1px solid var(--border);
+}
+
+.form-note{
+background:var(--surface);
+border:1px solid var(--border);
+border-radius:var(--radius);
+padding:16px;
+font-size:13px;
+color:var(--text-secondary);
+line-height:1.6;
+}
+
+/* Toast notification */
+.toast{
+position:fixed;
+bottom:100px;
+left:50%;
+transform:translateX(-50%) translateY(100px);
+background:var(--card);
+color:var(--text);
+padding:14px 24px;
+border-radius:var(--radius-full);
+font-size:14px;
+font-weight:500;
+box-shadow:var(--shadow);
+opacity:0;
+transition:all 0.3s ease;
+z-index:1000;
+}
+.toast.show{
+transform:translateX(-50%) translateY(0);
+opacity:1;
+}
+.toast.success{background:#10b981}
+.toast.error{background:#ef4444}
+
 /* Messages */
 .no-data{
 background:var(--surface);
@@ -677,10 +900,86 @@ font-size:14px;
 </div>
 </div>
 
-<!-- Page Stats -->
-<div class="page" id="pageStats">
+<!-- Page Contribuer -->
+<div class="page" id="pageContribuer">
 <div class="scroll">
-<div class="stats-grid" id="statsGrid"></div>
+<div class="form-intro">
+<div class="form-intro-icon">👨‍👩‍👧‍👦</div>
+<h2>Contribuer à l'arbre</h2>
+<p>Aidez-nous à compléter l'arbre familial en renseignant vos informations</p>
+</div>
+
+<div class="form-section">
+<div class="form-section-title">👤 Vos informations</div>
+<div class="form-group">
+<label>Nom</label>
+<input type="text" id="f_nom" placeholder="Votre nom de famille">
+</div>
+<div class="form-group">
+<label>Prénom</label>
+<input type="text" id="f_prenom" placeholder="Votre prénom">
+</div>
+</div>
+
+<div class="form-section">
+<div class="form-section-title">👨 Votre père</div>
+<div class="form-row">
+<div class="form-group">
+<label>Nom</label>
+<input type="text" id="f_pere_nom" placeholder="Nom du père">
+</div>
+<div class="form-group">
+<label>Prénom</label>
+<input type="text" id="f_pere_prenom" placeholder="Prénom du père">
+</div>
+</div>
+</div>
+
+<div class="form-section">
+<div class="form-section-title">👩 Votre mère</div>
+<div class="form-row">
+<div class="form-group">
+<label>Nom</label>
+<input type="text" id="f_mere_nom" placeholder="Nom de la mère">
+</div>
+<div class="form-group">
+<label>Prénom</label>
+<input type="text" id="f_mere_prenom" placeholder="Prénom de la mère">
+</div>
+</div>
+</div>
+
+<div class="form-section">
+<div class="form-section-title">
+<span>👶 Vos enfants</span>
+<button class="add-child-btn" onclick="addChild()">+ Ajouter</button>
+</div>
+<div id="childrenList"></div>
+<div class="no-children" id="noChildren">
+<p>Aucun enfant ajouté</p>
+<button class="add-first-child" onclick="addChild()">+ Ajouter un enfant</button>
+</div>
+</div>
+
+<div class="form-actions">
+<button class="action-btn whatsapp" onclick="sendWhatsApp()">
+<svg viewBox="0 0 24 24" fill="currentColor"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
+Envoyer par WhatsApp
+</button>
+<button class="action-btn copy" onclick="copyData()">
+<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"/><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"/></svg>
+Copier le texte
+</button>
+<button class="action-btn download" onclick="downloadData()">
+<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7,10 12,15 17,10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>
+Télécharger
+</button>
+</div>
+
+<div class="form-note">
+<strong>📌 Comment ça marche ?</strong><br>
+Remplissez le formulaire puis envoyez-le par WhatsApp ou copiez le texte pour l'envoyer par email. Vos informations seront ajoutées à l'arbre familial.
+</div>
 </div>
 </div>
 </main>
@@ -699,9 +998,9 @@ Recherche
 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M22 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg>
 Parenté
 </button>
-<button class="nav-item" onclick="showPage('pageStats',this)">
-<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M18 20V10"/><path d="M12 20V4"/><path d="M6 20v-6"/></svg>
-Stats
+<button class="nav-item" onclick="showPage('pageContribuer',this)">
+<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 5v14M5 12h14"/></svg>
+Contribuer
 </button>
 </nav>
 </div>
@@ -1031,7 +1330,7 @@ function findRelation() {
   `;
 }
 
-// Stats
+// Stats header
 function renderStats() {
   const ps = Object.values(D);
   const males = ps.filter(p => p.g === 'M').length;
@@ -1039,13 +1338,6 @@ function renderStats() {
   
   document.getElementById('maleCount').textContent = males;
   document.getElementById('femaleCount').textContent = females;
-  
-  document.getElementById('statsGrid').innerHTML = `
-    <div class="stat-card"><div class="stat-icon">👥</div><div class="stat-value">${ps.length}</div><div class="stat-label">Membres</div></div>
-    <div class="stat-card"><div class="stat-icon">👨</div><div class="stat-value">${males}</div><div class="stat-label">Hommes</div></div>
-    <div class="stat-card"><div class="stat-icon">👩</div><div class="stat-value">${females}</div><div class="stat-label">Femmes</div></div>
-    <div class="stat-card"><div class="stat-icon">🌳</div><div class="stat-value">5</div><div class="stat-label">Générations</div></div>
-  `;
 }
 
 // Init
@@ -1055,6 +1347,215 @@ document.addEventListener('DOMContentLoaded', () => {
   renderSearch();
   renderStats();
 });
+
+// ========== FORMULAIRE CONTRIBUER ==========
+let childCount = 0;
+
+function addChild() {
+  childCount++;
+  document.getElementById('noChildren').style.display = 'none';
+  
+  const childHtml = `
+    <div class="child-item" id="child${childCount}">
+      <div class="child-item-header">
+        <span class="child-number">Enfant ${childCount}</span>
+        <button class="remove-child" onclick="removeChild(${childCount})">×</button>
+      </div>
+      <div class="child-fields">
+        <div class="child-row">
+          <div class="form-group">
+            <label>Nom</label>
+            <input type="text" id="child${childCount}_nom" placeholder="Nom">
+          </div>
+          <div class="form-group">
+            <label>Prénom</label>
+            <input type="text" id="child${childCount}_prenom" placeholder="Prénom">
+          </div>
+        </div>
+        <div class="form-group">
+          <label>Genre</label>
+          <div class="gender-select">
+            <div class="gender-option" onclick="selectGender(${childCount}, 'M', this)">
+              <span>👨</span>
+              <small>Homme</small>
+            </div>
+            <div class="gender-option" onclick="selectGender(${childCount}, 'F', this)">
+              <span>👩</span>
+              <small>Femme</small>
+            </div>
+          </div>
+          <input type="hidden" id="child${childCount}_genre" value="">
+        </div>
+      </div>
+    </div>
+  `;
+  
+  document.getElementById('childrenList').insertAdjacentHTML('beforeend', childHtml);
+}
+
+function removeChild(num) {
+  document.getElementById(`child${num}`).remove();
+  // Vérifier s'il reste des enfants
+  if (document.getElementById('childrenList').children.length === 0) {
+    document.getElementById('noChildren').style.display = 'block';
+  }
+}
+
+function selectGender(childNum, gender, el) {
+  // Retirer la sélection des autres options
+  el.parentElement.querySelectorAll('.gender-option').forEach(opt => opt.classList.remove('selected'));
+  // Ajouter la sélection à l'option cliquée
+  el.classList.add('selected');
+  // Mettre à jour la valeur cachée
+  document.getElementById(`child${childNum}_genre`).value = gender;
+}
+
+function collectFormData() {
+  const data = {
+    nom: document.getElementById('f_nom').value.trim(),
+    prenom: document.getElementById('f_prenom').value.trim(),
+    pere: {
+      nom: document.getElementById('f_pere_nom').value.trim(),
+      prenom: document.getElementById('f_pere_prenom').value.trim()
+    },
+    mere: {
+      nom: document.getElementById('f_mere_nom').value.trim(),
+      prenom: document.getElementById('f_mere_prenom').value.trim()
+    },
+    enfants: []
+  };
+  
+  // Collecter les enfants
+  document.querySelectorAll('.child-item').forEach(item => {
+    const id = item.id.replace('child', '');
+    const enfant = {
+      nom: document.getElementById(`child${id}_nom`)?.value.trim() || '',
+      prenom: document.getElementById(`child${id}_prenom`)?.value.trim() || '',
+      genre: document.getElementById(`child${id}_genre`)?.value || ''
+    };
+    if (enfant.nom || enfant.prenom) {
+      data.enfants.push(enfant);
+    }
+  });
+  
+  return data;
+}
+
+function formatDataAsText(data) {
+  let text = `🌳 CONTRIBUTION ARBRE FAMILIAL ALY KOÏRA\n`;
+  text += `━━━━━━━━━━━━━━━━━━━━━━━━━━━━\n\n`;
+  
+  text += `👤 INFORMATIONS PERSONNELLES\n`;
+  text += `   Nom: ${data.nom || '(non renseigné)'}\n`;
+  text += `   Prénom: ${data.prenom || '(non renseigné)'}\n\n`;
+  
+  text += `👨 PÈRE\n`;
+  text += `   Nom: ${data.pere.nom || '(non renseigné)'}\n`;
+  text += `   Prénom: ${data.pere.prenom || '(non renseigné)'}\n\n`;
+  
+  text += `👩 MÈRE\n`;
+  text += `   Nom: ${data.mere.nom || '(non renseigné)'}\n`;
+  text += `   Prénom: ${data.mere.prenom || '(non renseigné)'}\n\n`;
+  
+  if (data.enfants.length > 0) {
+    text += `👶 ENFANTS (${data.enfants.length})\n`;
+    data.enfants.forEach((e, i) => {
+      const genre = e.genre === 'M' ? '👨' : e.genre === 'F' ? '👩' : '?';
+      text += `   ${i + 1}. ${e.prenom} ${e.nom} ${genre}\n`;
+    });
+  } else {
+    text += `👶 ENFANTS: Aucun\n`;
+  }
+  
+  text += `\n━━━━━━━━━━━━━━━━━━━━━━━━━━━━\n`;
+  text += `📅 Envoyé le ${new Date().toLocaleDateString('fr-FR')}`;
+  
+  return text;
+}
+
+function showToast(message, type = 'success') {
+  // Supprimer toast existant
+  const existing = document.querySelector('.toast');
+  if (existing) existing.remove();
+  
+  const toast = document.createElement('div');
+  toast.className = `toast ${type}`;
+  toast.textContent = message;
+  document.body.appendChild(toast);
+  
+  setTimeout(() => toast.classList.add('show'), 10);
+  setTimeout(() => {
+    toast.classList.remove('show');
+    setTimeout(() => toast.remove(), 300);
+  }, 3000);
+}
+
+function validateForm(data) {
+  if (!data.nom && !data.prenom) {
+    showToast('Veuillez renseigner votre nom ou prénom', 'error');
+    return false;
+  }
+  return true;
+}
+
+function sendWhatsApp() {
+  const data = collectFormData();
+  if (!validateForm(data)) return;
+  
+  const text = formatDataAsText(data);
+  const encoded = encodeURIComponent(text);
+  
+  // Numéro WhatsApp à configurer (remplacer par votre numéro)
+  const phoneNumber = ''; // Format: 22370000000
+  
+  let url;
+  if (phoneNumber) {
+    url = `https://wa.me/${phoneNumber}?text=${encoded}`;
+  } else {
+    url = `https://wa.me/?text=${encoded}`;
+  }
+  
+  window.open(url, '_blank');
+}
+
+function copyData() {
+  const data = collectFormData();
+  if (!validateForm(data)) return;
+  
+  const text = formatDataAsText(data);
+  
+  navigator.clipboard.writeText(text).then(() => {
+    showToast('✓ Texte copié ! Collez-le dans un email ou message');
+  }).catch(() => {
+    // Fallback pour les anciens navigateurs
+    const textarea = document.createElement('textarea');
+    textarea.value = text;
+    document.body.appendChild(textarea);
+    textarea.select();
+    document.execCommand('copy');
+    document.body.removeChild(textarea);
+    showToast('✓ Texte copié !');
+  });
+}
+
+function downloadData() {
+  const data = collectFormData();
+  if (!validateForm(data)) return;
+  
+  const text = formatDataAsText(data);
+  const blob = new Blob([text], { type: 'text/plain;charset=utf-8' });
+  const url = URL.createObjectURL(blob);
+  
+  const a = document.createElement('a');
+  a.href = url;
+  a.download = `contribution_${data.prenom || 'famille'}_${data.nom || 'koira'}.txt`;
+  document.body.appendChild(a);
+  a.click();
+  document.body.removeChild(a);
+  URL.revokeObjectURL(url);
+  
+  showToast('✓ Fichier téléchargé !');
+}
 </script>
 </body>
 </html>
