Change WhatsApp number to receive contributions
Updated WhatsApp phone number for contributions.

--- a/mobile.html
+++ b/mobile.html
@@ -1505,8 +1505,8 @@ function sendWhatsApp() {
   const text = formatDataAsText(data);
   const encoded = encodeURIComponent(text);
   
-  // Numéro WhatsApp à configurer (remplacer par votre numéro)
-  const phoneNumber = ''; // Format: 22370000000
+  // Numéro WhatsApp pour recevoir les contributions
+  const phoneNumber = '33662992985'; // France
   
   let url;
   if (phoneNumber) {
