--- a/mobile.html
+++ b/mobile.html
@@ -1412,14 +1412,25 @@ const D={
 "alkamahamane":{id:"alkamahamane",n:"Alkamahamane Sabalkaidi",a:null,g:"M",gen:1,f:null,m:null,sp:["Lalla Hamatou Lassane Koro"],c:["goussoumbi","goma","hounaye","soumboulou","farimata_alk","ali"]},
 
 // GÉNÉRATION 2
-"goussoumbi":{id:"goussoumbi",n:"Goussoumbi Alkamahamane",a:null,g:"M",gen:2,f:"alkamahamane",m:"Lalla Hamatou",c:[]},
-"goma":{id:"goma",n:"Goma Alkamahamane",a:null,g:"M",gen:2,f:"alkamahamane",m:"Lalla Hamatou",c:[]},
-"hounaye":{id:"hounaye",n:"Hounaye Alkamahamane",a:null,g:"F",gen:2,f:"alkamahamane",m:"Lalla Hamatou",c:[]},
+"goussoumbi":{id:"goussoumbi",n:"Goussoumbi Alkamahamane",a:null,g:"M",gen:2,f:"alkamahamane",m:"Lalla Hamatou",sp:["Aissa Mahamane Hamatou"],c:["alphary_g","garba_g","tillimmazou"]},
+"goma":{id:"goma",n:"Goma Alkamahamane",a:null,g:"M",gen:2,f:"alkamahamane",m:"Lalla Hamatou",c:["sidiki_g"]},
+"hounaye":{id:"hounaye",n:"Hounaye (Hounna) Alkamahamane",a:null,g:"M",gen:2,f:"alkamahamane",m:"Lalla Hamatou",sp:["Ibannia Albichir"],c:["hallachi_h","aissa_h","tayda_h"]},
 "soumboulou":{id:"soumboulou",n:"Soumboulou Alkamahamane",a:null,g:"F",gen:2,f:"alkamahamane",m:"Lalla Hamatou",c:[]},
 "farimata_alk":{id:"farimata_alk",n:"Farimata Alkamahamane",a:null,g:"F",gen:2,f:"alkamahamane",m:"Lalla Hamatou",c:["dalla"]},
 "ali":{id:"ali",n:"Ali Alkamahamane",a:"Aly Koïra",g:"M",gen:2,f:"alkamahamane",m:"Lalla Hamatou",sp:["Waykounga Samba","Farimata Alassane","Fouga Alassane Hamatou"],c:["mahamane","babachigaw","kobbo","moussa","omorou","tamimoune","mahadi"]},
 
 // GÉNÉRATION 3
+// Enfants de Goussoumbi
+"alphary_g":{id:"alphary_g",n:"Alphary Goussoumbi",a:null,g:"M",gen:3,f:"goussoumbi",m:"Aissa Mahamane Hamatou",c:[]},
+"garba_g":{id:"garba_g",n:"Garba Goussoumbi",a:null,g:"M",gen:3,f:"goussoumbi",m:"Aissa Mahamane Hamatou",c:[]},
+"tillimmazou":{id:"tillimmazou",n:"Tillimmazou Goussoumbi",a:null,g:"M",gen:3,f:"goussoumbi",m:"Aissa Mahamane Hamatou",c:[]},
+// Enfants de Goma
+"sidiki_g":{id:"sidiki_g",n:"Sidiki Goma",a:null,g:"M",gen:3,f:"goma",m:null,c:[]},
+// Enfants de Hounaye
+"hallachi_h":{id:"hallachi_h",n:"Hallachi Hounna",a:null,g:"M",gen:3,f:"hounaye",m:"Ibannia Albichir",c:[]},
+"aissa_h":{id:"aissa_h",n:"Aissa Hounna",a:null,g:"F",gen:3,f:"hounaye",m:"Ibannia Albichir",c:[]},
+"tayda_h":{id:"tayda_h",n:"Tayda Hounna",a:null,g:"M",gen:3,f:"hounaye",m:"Ibannia Albichir",c:[]},
+// Enfants de Ali Alkamahamane
 "mahamane":{id:"mahamane",n:"Mahamane Ali",a:null,g:"M",gen:3,f:"ali",m:"Waykounga Samba",sp:["Aïcha Houneye","Adijatou Hamma (Hadizatou)","Aïcha Hamma"],c:["mohomone","taya","ahmadou","yata","issouf","halilou","alhalil","aliou_m","houzaye","alassane_s","agaicha_m","abdou_d"]},
 "babachigaw":{id:"babachigaw",n:"Babachigaw Ali",a:null,g:"M",gen:3,f:"ali",m:"Farimata Alassane",sp:["Halimatou Mohomodou"],c:["aliou_b","aboubacar","ousmane_a","alhousseini","abdoulaye_s","nouhoum","mata_b"]},
 "kobbo":{id:"kobbo",n:"Agacha Ali",a:"Kobbo",g:"F",gen:3,f:"ali",m:"Fouga Alassane",sp:["Fedja Zongo","Mouhammadou Gagay","Taïda Houneï"],c:["aicha_f","arhamatou_f","issa_m","taya_m","izeboncana","jaouja","dally"]},
