--- a/mobile.html
+++ b/mobile.html
@@ -1412,7 +1412,7 @@ const D={
 "alkamahamane":{id:"alkamahamane",n:"Alkamahamane Sabalkaidi",a:null,g:"M",gen:1,f:null,m:null,sp:["Lalla Hamatou Lassane Koro"],c:["goussoumbi","goma","hounaye","soumboulou","farimata_alk","ali"]},
 
 // GÉNÉRATION 2
-"goussoumbi":{id:"goussoumbi",n:"Goussoumbi Alkamahamane",a:null,g:"M",gen:2,f:"alkamahamane",m:"Lalla Hamatou",sp:["Aissa Mahamane Hamatou"],c:["alphary_g","garba_g"]},
+"goussoumbi":{id:"goussoumbi",n:"Goussoumbi Alkamahamane",a:null,g:"M",gen:2,f:"alkamahamane",m:"Lalla Hamatou",sp:["Aissa Mahamane Hamatou"],c:["alphary_g","garba_g","klimazou"]},
 "goma":{id:"goma",n:"Goma Alkamahamane",a:null,g:"M",gen:2,f:"alkamahamane",m:"Lalla Hamatou",c:["sidiki_g"]},
 "hounaye":{id:"hounaye",n:"Hounaye (Hounna) Alkamahamane",a:null,g:"M",gen:2,f:"alkamahamane",m:"Lalla Hamatou",sp:["Ibannia Albichir"],c:["hallachi_h","aissa_h","tayda_h"]},
 "soumboulou":{id:"soumboulou",n:"Soumboulou Alkamahamane",a:null,g:"F",gen:2,f:"alkamahamane",m:"Lalla Hamatou",sp:["Alphaga Labassou Saye"],c:["kohondo","sagayo","tassaye"]},
@@ -1423,6 +1423,7 @@ const D={
 // Enfants de Goussoumbi
 "alphary_g":{id:"alphary_g",n:"Alphary Goussoumbi",a:null,g:"M",gen:3,f:"goussoumbi",m:"Aissa Mahamane Hamatou",sp:["Tamimoune Ali"],c:["chiddaye","mata_a","ichata_a","boudjal","saleymatou"]},
 "garba_g":{id:"garba_g",n:"Garba Goussoumbi",a:null,g:"F",gen:3,f:"goussoumbi",m:"Aissa Mahamane Hamatou",sp:["Alhady"],c:["hamadahamane_al","albakaya_al","yahiya_al","ndolly_al","hajarata_al"]},
+"klimazou":{id:"klimazou",n:"Klimazou Goussoumbi",a:null,g:"M",gen:3,f:"goussoumbi",m:"Aissa Mahamane Hamatou",c:["mahamadou_k"]},
 // Enfants de Goma
 "sidiki_g":{id:"sidiki_g",n:"Sidiki Goma",a:null,g:"M",gen:3,f:"goma",m:null,c:[]},
 // Enfants de Hounaye
@@ -1441,6 +1442,8 @@ const D={
 "yahiya_al":{id:"yahiya_al",n:"Yahiya Alhady",a:null,g:"M",gen:4,f:null,m:"garba_g",c:[]},
 "ndolly_al":{id:"ndolly_al",n:"N'dolly Alhady",a:null,g:"M",gen:4,f:null,m:"garba_g",c:[]},
 "hajarata_al":{id:"hajarata_al",n:"Hajarata Alhady",a:"Haji",g:"F",gen:4,f:null,m:"garba_g",c:[]},
+// Enfant de Kimazou Goussoumbi
+"mahamadou_k":{id:"mahamadou_k",n:"Mahamadou Klimazou",a:null,g:"M",gen:4,f:"klimazou",m:null,c:[]},
 
 // Enfants de Ali Alkamahamane
 "mahamane":{id:"mahamane",n:"Mahamane Ali",a:null,g:"M",gen:3,f:"ali",m:"Waykounga Samba",sp:["Aïcha Houneye","Adijatou Hamma (Hadizatou)","Aïcha Hamma"],c:["mohomone","taya","ahmadou","yata","issouf","halilou","alhalil","aliou_m","houzaye","alassane_s","agaicha_m","abdou_d"]},
